// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots PackageListItem Dark 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    bg="defaultBackground"
    p={3}
    style={
      Array [
        Object {
          "backgroundColor": "#262523",
          "paddingBottom": 15,
          "paddingLeft": 15,
          "paddingRight": 15,
          "paddingTop": 15,
        },
      ]
    }
  >
    <View
      alignItems="center"
      flexDirection="row"
      justifyContent="space-between"
      minHeight={44}
      py={3}
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "minHeight": 44,
            "paddingBottom": 15,
            "paddingTop": 15,
          },
        ]
      }
    >
      <View
        flex={1}
        mr={6}
        style={
          Array [
            Object {
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
              "marginRight": 40,
            },
          ]
        }
      >
        <Text
          color="normalText"
          fontFamily="body"
          fontSize={2}
          mb={1}
          style={
            Array [
              Object {
                "color": "white",
                "fontFamily": "Helvetica",
                "fontSize": 14,
                "marginBottom": 5,
              },
            ]
          }
        >
          <Text
            color="normalText"
            fontFamily="body"
            fontWeight="bold"
            style={
              Array [
                Object {
                  "color": "white",
                  "fontFamily": "Helvetica",
                  "fontWeight": "700",
                },
              ]
            }
          >
            Gói ngày
          </Text>
          <Text
            color="primary"
            fontFamily="body"
            fontWeight="bold"
            style={
              Array [
                Object {
                  "color": "#FDCC26",
                  "fontFamily": "Helvetica",
                  "fontWeight": "700",
                },
              ]
            }
          >
             1.000đ/ngày
          </Text>
        </Text>
        <Text
          color="lightText"
          fontFamily="body"
          fontSize={1}
          numberOfLines={3}
          style={
            Array [
              Object {
                "color": "#AAAAAA",
                "fontFamily": "Helvetica",
                "fontSize": 12,
              },
            ]
          }
        >
          Đã bao gồm VAT - Tải nhạc chờ không giới hạn
        </Text>
      </View>
      <View
        accessible={true}
        focusable={false}
        isTVSelectable={true}
        style={
          Object {
            "borderColor": "#979797",
            "borderRadius": 8,
            "borderWidth": 1,
            "height": 32,
            "justifyContent": "center",
            "opacity": 1,
            "overflow": "hidden",
            "width": 103,
          }
        }
      >
        <ViewManagerAdapter_ExpoLinearGradient
          proxiedProperties={
            Object {
              "colors": Array [
                0,
                0,
              ],
              "endPoint": Array [
                1,
                1,
              ],
              "locations": undefined,
              "startPoint": Array [
                0,
                0,
              ],
            }
          }
          style={
            Object {
              "height": "100%",
            }
          }
        >
          <View
            alignItems="center"
            flexDirection="row"
            height="100%"
            justifyContent="center"
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "height": "100%",
                  "justifyContent": "center",
                  "width": "100%",
                },
              ]
            }
            width="100%"
          >
            <Text
              color="normalText"
              fontFamily="body"
              fontSize={2}
              fontWeight="bold"
              style={
                Array [
                  Object {
                    "color": "white",
                    "fontFamily": "Helvetica",
                    "fontSize": 14,
                    "fontWeight": "700",
                  },
                  Object {},
                ]
              }
            >
              ĐĂNG KÝ
            </Text>
          </View>
        </ViewManagerAdapter_ExpoLinearGradient>
      </View>
    </View>
    <View
      bg="separator"
      height={1}
      style={
        Array [
          Object {
            "backgroundColor": "#3D3D3F",
            "height": 1,
            "width": "100%",
          },
        ]
      }
      width="100%"
    />
    <View
      alignItems="center"
      flexDirection="row"
      justifyContent="space-between"
      minHeight={44}
      py={3}
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "minHeight": 44,
            "paddingBottom": 15,
            "paddingTop": 15,
          },
        ]
      }
    >
      <View
        flex={1}
        mr={6}
        style={
          Array [
            Object {
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
              "marginRight": 40,
            },
          ]
        }
      >
        <Text
          color="normalText"
          fontFamily="body"
          fontSize={2}
          mb={1}
          style={
            Array [
              Object {
                "color": "white",
                "fontFamily": "Helvetica",
                "fontSize": 14,
                "marginBottom": 5,
              },
            ]
          }
        >
          <Text
            color="normalText"
            fontFamily="body"
            fontWeight="bold"
            style={
              Array [
                Object {
                  "color": "white",
                  "fontFamily": "Helvetica",
                  "fontWeight": "700",
                },
              ]
            }
          >
            Gói tuần
          </Text>
          <Text
            color="primary"
            fontFamily="body"
            fontWeight="bold"
            style={
              Array [
                Object {
                  "color": "#FDCC26",
                  "fontFamily": "Helvetica",
                  "fontWeight": "700",
                },
              ]
            }
          >
             5.000đ/tuần
          </Text>
        </Text>
        <Text
          color="lightText"
          fontFamily="body"
          fontSize={1}
          numberOfLines={3}
          style={
            Array [
              Object {
                "color": "#AAAAAA",
                "fontFamily": "Helvetica",
                "fontSize": 12,
              },
            ]
          }
        >
          2500đ/tuần đầu tiên, 5000đ/các tuần tiếp theo, Đã bao gồm VAT - Tải nhạc chờ không giới hạn
        </Text>
      </View>
      <View
        accessible={true}
        focusable={false}
        isTVSelectable={true}
        style={
          Object {
            "backgroundColor": "#FDCC26",
            "borderRadius": 10,
            "height": 32,
            "justifyContent": "center",
            "opacity": 1,
            "overflow": "hidden",
            "width": 103,
          }
        }
      >
        <ViewManagerAdapter_ExpoLinearGradient
          proxiedProperties={
            Object {
              "colors": Array [
                0,
                0,
              ],
              "endPoint": Array [
                1,
                1,
              ],
              "locations": undefined,
              "startPoint": Array [
                0,
                0,
              ],
            }
          }
          style={
            Object {
              "height": "100%",
            }
          }
        >
          <View
            alignItems="center"
            flexDirection="row"
            height="100%"
            justifyContent="center"
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "height": "100%",
                  "justifyContent": "center",
                  "width": "100%",
                },
              ]
            }
            width="100%"
          >
            <Text
              color="#262523"
              fontFamily="body"
              fontSize={2}
              fontWeight="bold"
              style={
                Array [
                  Object {
                    "color": "#262523",
                    "fontFamily": "Helvetica",
                    "fontSize": 14,
                    "fontWeight": "700",
                  },
                  Object {},
                ]
              }
            >
              HỦY
            </Text>
          </View>
        </ViewManagerAdapter_ExpoLinearGradient>
      </View>
    </View>
    <View
      bg="separator"
      height={1}
      style={
        Array [
          Object {
            "backgroundColor": "#3D3D3F",
            "height": 1,
            "width": "100%",
          },
        ]
      }
      width="100%"
    />
  </View>
</View>
`;

exports[`Storyshots PackageListItem Light 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    bg="defaultBackground"
    p={3}
    style={
      Array [
        Object {
          "backgroundColor": "white",
          "paddingBottom": 15,
          "paddingLeft": 15,
          "paddingRight": 15,
          "paddingTop": 15,
        },
      ]
    }
  >
    <View
      alignItems="center"
      flexDirection="row"
      justifyContent="space-between"
      minHeight={44}
      py={3}
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "minHeight": 44,
            "paddingBottom": 15,
            "paddingTop": 15,
          },
        ]
      }
    >
      <View
        flex={1}
        mr={6}
        style={
          Array [
            Object {
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
              "marginRight": 40,
            },
          ]
        }
      >
        <Text
          color="normalText"
          fontFamily="body"
          fontSize={2}
          mb={1}
          style={
            Array [
              Object {
                "color": "#262523",
                "fontFamily": "Helvetica",
                "fontSize": 14,
                "marginBottom": 5,
              },
            ]
          }
        >
          <Text
            color="normalText"
            fontFamily="body"
            fontWeight="bold"
            style={
              Array [
                Object {
                  "color": "#262523",
                  "fontFamily": "Helvetica",
                  "fontWeight": "700",
                },
              ]
            }
          >
            Gói ngày
          </Text>
          <Text
            color="primary"
            fontFamily="body"
            fontWeight="bold"
            style={
              Array [
                Object {
                  "color": "#FDCC26",
                  "fontFamily": "Helvetica",
                  "fontWeight": "700",
                },
              ]
            }
          >
             1.000đ/ngày
          </Text>
        </Text>
        <Text
          color="lightText"
          fontFamily="body"
          fontSize={1}
          numberOfLines={3}
          style={
            Array [
              Object {
                "color": "#676767",
                "fontFamily": "Helvetica",
                "fontSize": 12,
              },
            ]
          }
        >
          Đã bao gồm VAT - Tải nhạc chờ không giới hạn
        </Text>
      </View>
      <View
        accessible={true}
        focusable={false}
        isTVSelectable={true}
        style={
          Object {
            "borderColor": "#979797",
            "borderRadius": 8,
            "borderWidth": 1,
            "height": 32,
            "justifyContent": "center",
            "opacity": 1,
            "overflow": "hidden",
            "width": 103,
          }
        }
      >
        <ViewManagerAdapter_ExpoLinearGradient
          proxiedProperties={
            Object {
              "colors": Array [
                0,
                0,
              ],
              "endPoint": Array [
                1,
                1,
              ],
              "locations": undefined,
              "startPoint": Array [
                0,
                0,
              ],
            }
          }
          style={
            Object {
              "height": "100%",
            }
          }
        >
          <View
            alignItems="center"
            flexDirection="row"
            height="100%"
            justifyContent="center"
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "height": "100%",
                  "justifyContent": "center",
                  "width": "100%",
                },
              ]
            }
            width="100%"
          >
            <Text
              color="normalText"
              fontFamily="body"
              fontSize={2}
              fontWeight="bold"
              style={
                Array [
                  Object {
                    "color": "#262523",
                    "fontFamily": "Helvetica",
                    "fontSize": 14,
                    "fontWeight": "700",
                  },
                  Object {},
                ]
              }
            >
              ĐĂNG KÝ
            </Text>
          </View>
        </ViewManagerAdapter_ExpoLinearGradient>
      </View>
    </View>
    <View
      bg="separator"
      height={1}
      style={
        Array [
          Object {
            "backgroundColor": "#F1F1F1",
            "height": 1,
            "width": "100%",
          },
        ]
      }
      width="100%"
    />
    <View
      alignItems="center"
      flexDirection="row"
      justifyContent="space-between"
      minHeight={44}
      py={3}
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "minHeight": 44,
            "paddingBottom": 15,
            "paddingTop": 15,
          },
        ]
      }
    >
      <View
        flex={1}
        mr={6}
        style={
          Array [
            Object {
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
              "marginRight": 40,
            },
          ]
        }
      >
        <Text
          color="normalText"
          fontFamily="body"
          fontSize={2}
          mb={1}
          style={
            Array [
              Object {
                "color": "#262523",
                "fontFamily": "Helvetica",
                "fontSize": 14,
                "marginBottom": 5,
              },
            ]
          }
        >
          <Text
            color="normalText"
            fontFamily="body"
            fontWeight="bold"
            style={
              Array [
                Object {
                  "color": "#262523",
                  "fontFamily": "Helvetica",
                  "fontWeight": "700",
                },
              ]
            }
          >
            Gói tuần
          </Text>
          <Text
            color="primary"
            fontFamily="body"
            fontWeight="bold"
            style={
              Array [
                Object {
                  "color": "#FDCC26",
                  "fontFamily": "Helvetica",
                  "fontWeight": "700",
                },
              ]
            }
          >
             5.000đ/tuần
          </Text>
        </Text>
        <Text
          color="lightText"
          fontFamily="body"
          fontSize={1}
          numberOfLines={3}
          style={
            Array [
              Object {
                "color": "#676767",
                "fontFamily": "Helvetica",
                "fontSize": 12,
              },
            ]
          }
        >
          2500đ/tuần đầu tiên, 5000đ/các tuần tiếp theo, Đã bao gồm VAT - Tải nhạc chờ không giới hạn
        </Text>
      </View>
      <View
        accessible={true}
        focusable={false}
        isTVSelectable={true}
        style={
          Object {
            "backgroundColor": "#FDCC26",
            "borderRadius": 10,
            "height": 32,
            "justifyContent": "center",
            "opacity": 1,
            "overflow": "hidden",
            "width": 103,
          }
        }
      >
        <ViewManagerAdapter_ExpoLinearGradient
          proxiedProperties={
            Object {
              "colors": Array [
                0,
                0,
              ],
              "endPoint": Array [
                1,
                1,
              ],
              "locations": undefined,
              "startPoint": Array [
                0,
                0,
              ],
            }
          }
          style={
            Object {
              "height": "100%",
            }
          }
        >
          <View
            alignItems="center"
            flexDirection="row"
            height="100%"
            justifyContent="center"
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "height": "100%",
                  "justifyContent": "center",
                  "width": "100%",
                },
              ]
            }
            width="100%"
          >
            <Text
              color="#262523"
              fontFamily="body"
              fontSize={2}
              fontWeight="bold"
              style={
                Array [
                  Object {
                    "color": "#262523",
                    "fontFamily": "Helvetica",
                    "fontSize": 14,
                    "fontWeight": "700",
                  },
                  Object {},
                ]
              }
            >
              HỦY
            </Text>
          </View>
        </ViewManagerAdapter_ExpoLinearGradient>
      </View>
    </View>
    <View
      bg="separator"
      height={1}
      style={
        Array [
          Object {
            "backgroundColor": "#F1F1F1",
            "height": 1,
            "width": "100%",
          },
        ]
      }
      width="100%"
    />
     
  </View>
</View>
`;
